# Python_Module

module_00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
module_00/ex7/: ft_seed_inventory.py
module_01/ex0/: ft_garden_intro.py
module_01/ex1/: ft_garden_data.py
module_01/ex2/: ft_plant_growth.py
module_01/ex3/: ft_plant_factory.py
module_01/ex4/: ft_garden_security.py
module_01/ex5/: ft_plant_types.py
module_01/ex6/: ft_garden_analytics.py
module_02/ex0/: ft_first_exception.py
module_02/ex1/: ft_different_errors.py
module_02/ex2/: ft_custom_errors.py
module_02/ex3/: ft_finally_block.py
module_02/ex4/: ft_raise_errors.py
module_02/ex5/: ft_garden_management.py
module_03/ex0/: ft_command_quest.py
module_03/ex1/: ft_score_analytics.py
module_03/ex2/: ft_coordinate_system.py
module_03/ex3/: ft_achievement_tracker.py
module_03/ex4/: ft_inventory_system.py
module_03/ex5/: ft_data_stream.py
module_03/ex6/: ft_analytics_dashboard.py
module_04/ex0/: ft_ancient_text.py
module_04/ex1/: ft_archive_creation.py
module_04/ex2/: ft_stream_management.py
module_04/ex3/: ft_vault_security.py
module_04/ex4/: ft_crisis_response.py
module_05/ex0/: stream_processor.py
module_05/ex1/: data_stream.py
module_05/ex2/: nexus_pipeline.py
module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
module_06/alchemy/: __init__.py  potions.py
module_07/ex0/: Card.py  CreatureCard.py  main.py
module_07/ex1/: ArtifactCard.py  (+3 more)
module_08/ex1/: loading.py  pyproject.toml
(+26 files in other folders)
